API: POST, DELETE MEMCACHE UNITTEST

--- a/banking/personalbanking/templates/personalbanking/bodyAfter.html
+++ b/banking/personalbanking/templates/personalbanking/bodyAfter.html
@@ -11,7 +11,7 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">AAA Bank</a>
+      <a class="navbar-brand" href="#">Bank of America</a>
     </div>
     <ul class="nav navbar-nav">
       <li class="active"><a href="#">Home</a></li>
@@ -19,7 +19,7 @@
       <li><a href="#">Page 2</a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a>Hi {{ name }}</a></li>
+      <li><a>Hello {{ name }}</a></li>
       <li><a href="/logout"><span class="glyphicon glyphicon-log-out"></span> Logout</a></li>
     </ul>
   </div>
