--- a/banking/personalbanking/templates/personalbanking/bodyBefore.html
+++ b/banking/personalbanking/templates/personalbanking/bodyBefore.html
@@ -13,7 +13,7 @@
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a class="navbar-brand" href="#">AAA Bank</a>
+      <a class="navbar-brand" href="#">Bank of America</a>
     </div>
     <ul class="nav navbar-nav">
       <li><a href="#">Contact</a></li>
